fixed bottom of the page on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -142,8 +142,14 @@ span.role {
 }
 
 svg.email_subscription {
-    min-width: 424px;
+    position:relative;
+    display: block;
     max-height: 50px;
+    height:60px;
+    width:414px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom:10px;
 }
 
 svg.tomorrow {
@@ -161,6 +167,49 @@ p.main_title {
 
 }
 
+@media all and (min-width: 1000px) {
+    #mc_embed_signup .button {
+        margin-left: 20px !important;
+    
+    }
+}
+
+@media all and (max-width: 1000px) {
+    
+    svg.email_subscription text {
+        font-size:18pt !important; 
+        
+    }
+    
+    svg.email_subscription {
+        width:290px !important;
+    }
+    
+    #mc_embed_signup .button {
+        width:80% !important;
+        max-width:320px;
+        margin-top:15px !important; 
+    }
+    
+    #mc_embed_signup input.email {
+        max-width:80%;   
+       
+    }
+    
+    div#mc_embed_signup_scroll {
+        margin-right: 20px !important;
+        margin-left:20px !important;
+    }
+
+}
+
+svg.email_subscription text {
+   font-size:25pt; 
+   
+}
+
+
+
 #video_title {
     padding-top: 10px;
 }
@@ -169,7 +218,7 @@ p.main_subtitle {
      margin-left: auto;
     margin-right: auto;
     text-align: center;
-    width: 100%;
+    width: 90%;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-size: 1.2em;
@@ -196,7 +245,7 @@ p.main_subtitle {
 #mc_embed_signup .button {
     color:black !important;
     text-align: center;
-    margin-left: 20px !important;
+    /*margin-left: 20px !important;*/
     border-radius: 20px !important;
     font: 15px 'Roboto', sans-serif;
     font-size: 14px !important;
